# shared-media-streaming

./: .dockerignore  .gitignore  .prettierrc  Backend.dockerfile  Dockerfile  EFFICIENCY_REPORT.md  Frontend.dockerfile  GITHUB_PR_TEMPLATE.md  README.md  biome.json  docker-compose.yml  env.example  eslint.config.js  index.js  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.json
apps/backend/: .env.development  .env.production  Dockerfile  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/backend/src/: app.ts  index.ts
apps/backend/src/config/: db.ts
apps/backend/src/constants/: httpStatus.ts
apps/backend/src/interfaces/: ILoggingService.ts  index.ts
apps/backend/src/middleware/: errorHandler.middleware.ts  errorHandler.ts  index.ts  (+1 more)
apps/frontend/: components.json  env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/upload_client/: CMakeLists.txt  README.md  build.sh
apps/upload_client/include/: authdialog.h  foldersync.h  mainwindow.h  networkmanager.h  settings.h  uploadmanager.h
apps/upload_client/macos/: Info.plist
apps/upload_client/resources/: resources.qrc
apps/upload_client/src/: authdialog.cpp  foldersync.cpp  main.cpp  mainwindow.cpp  networkmanager.cpp  settings.cpp  uploadmanager.cpp
apps/upload_client/ui/: authdialog.ui  mainwindow.ui
docs/: ER_Diagram.md  backend-api.md  production-deployment-guide.md  setup.md  socket-events.md
envfiles/: README.md  backend.env.example  frontend.env.example  jwt.example.env  mongo.example.env  production.example.env  sms.example.env
src/: index.js  socket.js  test-socket.js
src/models/: MediaSession.js
(+184 files in other folders)
